Archive2/be/4074970d5da3cb/output
main.cpp:10:6: error: cannot increment value of type 'S'
    s++;
    ~^
1 error generated.
